TD-468 copy standalone next.js build output into final container

--- a/apps/dialog/Dockerfile
+++ b/apps/dialog/Dockerfile
@@ -50,46 +50,24 @@ RUN --mount=type=secret,id=SENTRY_AUTH_TOKEN,env=SENTRY_AUTH_TOKEN \
     --mount=type=secret,id=SENTRY_PROJECT,env=SENTRY_PROJECT \
     CI=${CI} \
     turbo build:envless
-# RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm prune --prod --no-optional
-RUN pnpm prune --prod --no-optional
-RUN cp -r /app/apps/dialog/.next/standalone/* /app/
 
 # Final image
 FROM base AS runner
-WORKDIR /app
 
-COPY --from=builder --exclude=.git /app/ .
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nodejs
+USER nodejs
+
+WORKDIR /app
+# copy nextjs application
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/standalone ./
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/static ./apps/dialog/.next/static
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/public ./apps/dialog/public
 
 ARG PORT=3000
 ENV PORT=${PORT}
 ENV NODE_ENV=production
 EXPOSE ${PORT}
 
+# https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
 CMD ["node", "./apps/dialog/server.js"]
-
-
-## RUN rm -rf ./**/*/src
-
-# Final image
-# FROM base AS runner
-
-# RUN addgroup --system --gid 1001 nodejs
-# RUN adduser --system --uid 1001 nodejs
-# USER nodejs
-
-# WORKDIR /app
-# # copy nextjs application 
-# COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/standalone ./
-# COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/static ./apps/dialog/.next/static
-# # copy whole db folder in order to run database migrations
-# COPY --from=pruner --chown=nodejs:nodejs /app/apps/dialog/src/db /app/apps/dialog/src/db
-
-# ARG PORT=3000
-# ENV PORT=${PORT}
-# ENV NODE_ENV=production
-# ENV NEXT_TELEMETRY_DISABLED=1
-# ENV TURBO_TELEMETRY_DISABLED=1
-# EXPOSE ${PORT}
-
-# # https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
-# CMD pnpm db:migrate && node server.js
