TD-468 enable sentry sourcemaps upload with automatic release creation based on git commit (#185)
* TD-468 setup sentry config (org and project) for Docker build and enable release generation

* TD-468 fix telemetry optout in docker build

* TD-468 use docker/build-push-action to build containers

* TD-468 fix warning in docker build

* TD-468 copy standalone next.js build output into final container

--- a/apps/dialog/Dockerfile
+++ b/apps/dialog/Dockerfile
@@ -11,6 +11,9 @@ FROM alpine AS base
 RUN npm install pnpm turbo --global
 RUN pnpm config set store-dir ~/.pnpm-store
 
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV TURBO_TELEMETRY_DISABLED=1
+
 # Prune projects
 FROM base AS pruner
 WORKDIR /app
@@ -21,6 +24,9 @@ RUN turbo prune --scope=telli-dialog --docker
 # Build the project
 FROM base AS builder
 WORKDIR /app
+
+# Git is required for sentry
+RUN apk add --no-cache git
 
 # Copy lockfile and package.json's of isolated subworkspace
 COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
@@ -34,47 +40,34 @@ RUN pnpm install --frozen-lockfile
 # Copy source code of isolated subworkspace
 COPY --from=pruner /app/out/full/ .
 
+# Copy git history, required for sentry to determine release name
+COPY .git ./.git
+
 ARG CI
 
 RUN --mount=type=secret,id=SENTRY_AUTH_TOKEN,env=SENTRY_AUTH_TOKEN \
+    --mount=type=secret,id=SENTRY_ORG,env=SENTRY_ORG \
+    --mount=type=secret,id=SENTRY_PROJECT,env=SENTRY_PROJECT \
     CI=${CI} \
     turbo build:envless
-# RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm prune --prod --no-optional
-RUN pnpm prune --prod --no-optional
-RUN cp -r /app/apps/dialog/.next/standalone/* /app/
+
+# Final image
+FROM base AS runner
+
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nodejs
+USER nodejs
+
+WORKDIR /app
+# copy nextjs application
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/standalone ./
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/static ./apps/dialog/.next/static
+COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/public ./apps/dialog/public
 
 ARG PORT=3000
 ENV PORT=${PORT}
 ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
-ENV TURBO_TELEMETRY_DISABLED=1
 EXPOSE ${PORT}
 
-CMD node ./apps/dialog/server.js
-
-
-## RUN rm -rf ./**/*/src
-
-# Final image
-# FROM base AS runner
-
-# RUN addgroup --system --gid 1001 nodejs
-# RUN adduser --system --uid 1001 nodejs
-# USER nodejs
-
-# WORKDIR /app
-# # copy nextjs application 
-# COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/standalone ./
-# COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/static ./apps/dialog/.next/static
-# # copy whole db folder in order to run database migrations
-# COPY --from=pruner --chown=nodejs:nodejs /app/apps/dialog/src/db /app/apps/dialog/src/db
-
-# ARG PORT=3000
-# ENV PORT=${PORT}
-# ENV NODE_ENV=production
-# ENV NEXT_TELEMETRY_DISABLED=1
-# ENV TURBO_TELEMETRY_DISABLED=1
-# EXPOSE ${PORT}
-
-# # https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
-# CMD pnpm db:migrate && node server.js
+# https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
+CMD ["node", "./apps/dialog/server.js"]
