--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -29,6 +29,7 @@
     "next": "15.5.4",
     "next-auth": "4.24.11",
     "react": "19.0.0",
+    "react-csv": "2.2.2",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@telli/typescript-config": "workspace:*",
     "@types/node": "20.17.12",
     "@types/react": "19.0.3",
+    "@types/react-csv": "1.1.10",
     "@types/react-dom": "19.0.2",
     "@types/react-syntax-highlighter": "15.5.13",
     "esbuild": "0.25.5",
