--- a/devops/docker/docker-compose.db.local.yml
+++ b/devops/docker/docker-compose.db.local.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - postgres_data_telli_dialog:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - '127.0.0.1:5432:5432'
     networks:
       - postgres_network
     healthcheck:
@@ -20,6 +20,17 @@ services:
       retries: 5
       start_period: 30s
 
+  telli_dialog_valkey:
+    image: ghcr.io/valkey-io/valkey:8
+    container_name: telli_dialog_valkey
+    restart: always
+    volumes:
+      - valkey_data:/data
+    ports:
+      - '127.0.0.1:6379:6379'
+    networks:
+      - postgres_network
+
 networks:
   postgres_network:
     driver: bridge
@@ -27,3 +38,4 @@ networks:
 volumes:
   postgres_data_telli_dialog:
     driver: local
+  valkey_data:
