--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,7 @@
   "$schema": "https://turborepo.com/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "globalEnv": [
+    "AUTH_SECRET",
     "NODE_ENV",
     "DATABASE_URL",
     "OTC_BUCKET_NAME",
