--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@ai-sdk/openai": "1.1.9",
     "@ai-sdk/react": "1.2.12",
+    "@auth/unstorage-adapter": "2.11.0",
     "@aws-sdk/client-s3": "3.744.0",
     "@aws-sdk/s3-request-presigner": "3.744.0",
     "@deutschlandgpt/core": "0.1.5",
@@ -107,6 +108,7 @@
     "tailwindcss-animate": "1.0.7",
     "tsx": "4.19.4",
     "unpdf": "1.0.5",
+    "unstorage": "1.17.1",
     "zod": "3.25.67"
   },
   "devDependencies": {
