--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -25,6 +25,7 @@
     "db:seed:local": "ENVIRONMENT=development dotenvx run -f .env.local -- pnpm tsx src/db/seed/index.ts",
     "e2e": "playwright test",
     "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
+    "e2e:api:ui": "dotenvx run -f .env.local -- playwright test tests/api/ --ui",
     "e2e:headed": "playwright test --headed",
     "e2e:ui": "playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.mjs"
