--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -13,6 +13,7 @@
   "aliases": {
     "components": "@telli/ui/components",
     "utils": "@telli/ui/lib/utils",
-    "lib": "@telli/ui/lib"
+    "lib": "@telli/ui/lib",
+    "types": "@telli/ui/types"
   }
 }
