--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,8 @@
     "clsx": "2.1.1",
     "lucide-react": "0.536.0",
     "tailwind-merge": "3.0.1",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
