TD-349 valkey_url added to .env config

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -22,3 +22,6 @@ API_URL=http://127.0.0.1:3002
 
 # Used for encryption of sensitive secrets stored in the database
 ENCRYPTION_KEY=
+
+# Valkey (Redis) configuration for session storage
+VALKEY_URL="redis://localhost:6379/0"
