--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -22,3 +22,7 @@ API_URL=http://127.0.0.1:3002
 
 # Used for encryption of sensitive secrets stored in the database
 ENCRYPTION_KEY=
+
+# Monitoring
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:9090/api/v1/otlp/v1/metrics
