--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -23,7 +23,7 @@
     "db:migrate:local": "dotenvx run -f .env.local -- drizzle-kit migrate --config=./drizzle.config.ts",
     "db:seed": "tsx src/db/seed/index.ts",
     "db:seed:local": "ENVIRONMENT=development dotenvx run -f .env.local -- pnpm tsx src/db/seed/index.ts",
-    "e2e": "playwright test",
+    "e2e": "NODE_OPTIONS=--experimental-require-module playwright test",
     "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
     "e2e:api:ui": "dotenvx run -f .env.local -- playwright test tests/api/ --ui",
     "e2e:headed": "playwright test --headed",
