--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -98,8 +98,8 @@
     "rehype-katex": "7.0.1",
     "remark-gfm": "4.0.1",
     "remark-math": "6.0.0",
-    "require-in-the-middle": "7.5.1",
-    "sentence-splitter": "^5.0.0",
+    "require-in-the-middle": "8.0.0",
+    "sentence-splitter": "5.0.0",
     "sharp": "0.33.3",
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
