Fix e2e tests in pipeline (#207)
* Use NODE_OPTIONS=--experimental-require-module for e2e tests

* Use fixed npm versions

--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -23,7 +23,7 @@
     "db:migrate:local": "dotenvx run -f .env.local -- drizzle-kit migrate --config=./drizzle.config.ts",
     "db:seed": "tsx src/db/seed/index.ts",
     "db:seed:local": "ENVIRONMENT=development dotenvx run -f .env.local -- pnpm tsx src/db/seed/index.ts",
-    "e2e": "playwright test",
+    "e2e": "NODE_OPTIONS=--experimental-require-module playwright test",
     "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
     "e2e:api:ui": "dotenvx run -f .env.local -- playwright test tests/api/ --ui",
     "e2e:headed": "playwright test --headed",
@@ -98,8 +98,8 @@
     "rehype-katex": "7.0.1",
     "remark-gfm": "4.0.1",
     "remark-math": "6.0.0",
-    "require-in-the-middle": "7.5.1",
-    "sentence-splitter": "^5.0.0",
+    "require-in-the-middle": "8.0.0",
+    "sentence-splitter": "5.0.0",
     "sharp": "0.33.3",
     "tailwind-merge": "3.0.1",
     "tailwindcss": "3.4.1",
