fix designConfiguration handling in federal state form (#201)
* fix designConfiguration handling in federal state form

* linting

* remove console.log

* linting

* extract design configuration type to ui package

* typing

* fix compiler options

--- a/apps/dialog/tsconfig.json
+++ b/apps/dialog/tsconfig.json
@@ -4,9 +4,10 @@
   "extends": "@telli/typescript-config/nextjs.json",
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@ui/*": ["../../packages/ui/src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "next.config.mjs", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
