feat/TD-511 session valkey (#205)
* add unstorage to package.json

* store userId in valkey

* TD-349 backchannel logout implemented

* TD-349 valkey_url added to .env config

* TD-349 remove session during standard logout

* TD-349 move keycloak into separate docker compose file

* update lock file

* use a session blocklist instead of session list

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -26,3 +26,6 @@ ENCRYPTION_KEY=
 # Monitoring
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:9090/api/v1/otlp/v1/metrics
+
+# Valkey (Redis) configuration for session storage
+VALKEY_URL="redis://localhost:6379/0"
