--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -106,6 +106,7 @@
     "tailwindcss-animate": "1.0.7",
     "tsx": "4.19.4",
     "unpdf": "1.0.5",
+    "unstorage": "1.17.1",
     "zod": "3.25.67",
     "@telli/ui": "workspace:*"
   },
