--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,6 +33,7 @@
     "prettier": "3.4.2",
     "prettier-eslint": "16.4.2",
     "react": "19.0.0",
+    "react-hook-form": "7.54.2",
     "tailwindcss": "4.1.11",
     "typescript": "5.7.2"
   },
