--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,8 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.536.0",
+    "next-themes": "0.4.6",
+    "sonner": "2.0.7",
     "tailwind-merge": "3.0.1",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.25.67"
