--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,6 +14,7 @@
   },
   "packageManager": "pnpm@9.15.1",
   "dependencies": {
+    "@hookform/resolvers": "3.10.0",
     "@opentelemetry/api": "1.9.0",
     "@opentelemetry/exporter-metrics-otlp-http": "0.206.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.206.0",
@@ -24,14 +25,14 @@
     "@opentelemetry/sdk-trace-node": "2.1.0",
     "@opentelemetry/semantic-conventions": "1.37.0",
     "@telli/ui": "workspace:*",
-    "@hookform/resolvers": "3.10.0",
     "lucide-react": "0.536.0",
     "next": "15.5.4",
     "next-auth": "4.24.11",
-    "react-hook-form": "7.54.2",
     "react": "19.0.0",
     "react-csv": "2.2.2",
     "react-dom": "19.0.0",
+    "react-hook-form": "7.65.0",
+    "sonner": "2.0.7",
     "zod": "3.25.67"
   },
   "devDependencies": {
