--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -58,6 +58,7 @@
     "@sentry/nextjs": "10.17.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tanstack/react-query": "5.66.0",
+    "@telli/ui": "workspace:*",
     "@types/express": "5.0.0",
     "@types/pg": "8.11.11",
     "ai": "4.3.16",
@@ -90,7 +91,7 @@
     "rabbitmq-client": "5.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-hook-form": "7.54.2",
+    "react-hook-form": "7.65.0",
     "react-image-crop": "11.0.7",
     "react-markdown": "9.0.3",
     "react-syntax-highlighter": "15.6.1",
@@ -107,8 +108,7 @@
     "tsx": "4.19.4",
     "unpdf": "1.0.5",
     "unstorage": "1.17.1",
-    "zod": "3.25.67",
-    "@telli/ui": "workspace:*"
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
