--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,6 +12,8 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.536.0",
+    "next-themes": "0.4.6",
+    "sonner": "2.0.7",
     "tailwind-merge": "3.0.1",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.25.67"
@@ -33,6 +35,7 @@
     "prettier": "3.4.2",
     "prettier-eslint": "16.4.2",
     "react": "19.0.0",
+    "react-hook-form": "7.65.0",
     "tailwindcss": "4.1.11",
     "typescript": "5.7.2"
   },
