--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,6 @@ test-results/
 # Sentry Config File
 .env.sentry-build-plugin
 
-e2e/load_test/index.js
-e2e/load_test/success-results/
-e2e/load_test/error-results/
-e2e/vidis-mock-server.js
+apps/dialog/e2e/load_test/*.js
+apps/dialog/e2e/load_test/success-results/
+apps/dialog/e2e/load_test/error-results/
