--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,7 @@
   "$schema": "https://turborepo.com/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "globalEnv": [
+    "APP_VERSION",
     "AUTH_SECRET",
     "NODE_ENV",
     "DATABASE_URL",
@@ -18,7 +19,9 @@
     "NEXTAUTH_URL",
     "RABBITMQ_URI",
     "NEXT_RUNTIME",
-    "VALKEY_URL"
+    "VALKEY_URL",
+    "OTEL_METRIC_EXPORT_INTERVAL",
+    "OTEL_METRIC_EXPORT_TIMEOUT"
   ],
   "tasks": {
     "build": {
