--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "@telli/typescript-config": "workspace:*",
     "prettier": "3.4.2",
     "turbo": "2.5.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "require-in-the-middle": "8.0.1"
+    }
   }
 }
