TD-547 disable test-login, when env variable is not set

--- a/turbo.json
+++ b/turbo.json
@@ -23,7 +23,8 @@
     "OTEL_METRIC_EXPORT_INTERVAL",
     "OTEL_METRIC_EXPORT_TIMEOUT",
     "SENTRY_DSN",
-    "SENTRY_ENVIRONMENT"
+    "SENTRY_ENVIRONMENT",
+    "LOADTEST_PASSWORD"
   ],
   "tasks": {
     "build": {
