--- a/turbo.json
+++ b/turbo.json
@@ -21,7 +21,9 @@
     "NEXT_RUNTIME",
     "VALKEY_URL",
     "OTEL_METRIC_EXPORT_INTERVAL",
-    "OTEL_METRIC_EXPORT_TIMEOUT"
+    "OTEL_METRIC_EXPORT_TIMEOUT",
+    "SENTRY_DSN",
+    "SENTRY_ENVIRONMENT"
   ],
   "tasks": {
     "build": {
