--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -59,7 +59,8 @@
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-toast": "1.2.6",
     "@radix-ui/react-tooltip": "1.1.8",
-    "@sentry/nextjs": "10.21.0",
+    "@sentry/nextjs": "10.22.0",
+    "@sentry/opentelemetry": "10.22.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tanstack/react-query": "5.66.0",
     "@telli/ui": "workspace:*",
@@ -129,10 +130,10 @@
     "concurrently": "9.2.0",
     "esbuild": "0.25.5",
     "eslint": "9.17.0",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.5.6",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-turbo": "2.5.5",
-    "eslint-plugin-prettier": "5.5.3",
+    "eslint-plugin-prettier": "5.5.4",
     "express": "4.21.2",
     "jose": "6.0.6",
     "k6": "0.0.0",
