TD-569 limit logs sent to sentry (default to info and above)

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -16,6 +16,8 @@ OTC_BUCKET_NAME=
 SENTRY_AUTH_TOKEN=
 SENTRY_ENVIRONMENT=development
 SENTRY_DSN=
+# fatal, error, warning, log, info, debug
+SENTRY_LOG_LEVEL=
 
 # Third party apis
 API_URL=http://127.0.0.1:3002
