--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,7 @@
     "OTEL_METRIC_EXPORT_TIMEOUT",
     "SENTRY_DSN",
     "SENTRY_ENVIRONMENT",
+    "SENTRY_LOG_LEVEL",
     "LOADTEST_PASSWORD"
   ],
   "tasks": {
