--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,10 +38,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.17.0",
     "@telli/typescript-config": "workspace:*",
     "@types/bcrypt": "5.0.2",
     "@types/node": "22.13.14",
     "@types/pg": "8.11.11",
+    "@typescript-eslint/eslint-plugin": "8.19.1",
+    "@typescript-eslint/parser": "8.19.1",
     "dotenv-cli": "10.0.0",
     "eslint": "9.17.0",
     "eslint-config-prettier": "10.1.8",
