TD-569 expose log level to client

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -17,7 +17,7 @@ SENTRY_AUTH_TOKEN=
 SENTRY_ENVIRONMENT=development
 SENTRY_DSN=
 # fatal, error, warning, log, info, debug
-SENTRY_LOG_LEVEL=
+NEXT_PUBLIC_SENTRY_LOG_LEVEL=
 
 # Third party apis
 API_URL=http://127.0.0.1:3002
