TD-569 start valkey in e2e pipeline and use hardcoded env values where appropriate

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,6 +27,15 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      valkey:
+        image: ghcr.io/valkey-io/valkey:8
+        ports:
+          - 6379:6379
+
+    env:
+      NEXTAUTH_URL: http://localhost:3000
+      DATABASE_URL: postgresql://telli_dialog_db:test1234@127.0.0.1:5432/telli_dialog_db
+      VALKEY_URL: redis://127.0.0.1:6379/0
 
     steps:
       - name: Checkout code
@@ -38,8 +47,6 @@ jobs:
           export-env: true
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          NEXTAUTH_URL: op://telli Engineering/.env.e2e chatbot/NEXTAUTH_URL
-          DATABASE_URL: op://telli Engineering/.env.e2e chatbot/DATABASE_URL
           AUTH_SECRET: op://telli Engineering/.env.e2e chatbot/AUTH_SECRET
           OTC_SECRET_ACCESS_KEY: op://telli Engineering/.env.e2e chatbot/OTC_SECRET_ACCESS_KEY
           OTC_ACCESS_KEY_ID: op://telli Engineering/.env.e2e chatbot/OTC_ACCESS_KEY_ID
