copy migrations in docker file and adapt migrations path

--- a/apps/dialog/Dockerfile
+++ b/apps/dialog/Dockerfile
@@ -63,6 +63,7 @@ WORKDIR /app
 COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/standalone ./
 COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/.next/static ./apps/dialog/.next/static
 COPY --from=builder --chown=nodejs:nodejs /app/apps/dialog/public ./apps/dialog/public
+COPY --from=builder --chown=nodejs:nodejs /app/packages/shared/migrations ./packages/shared/migrations
 
 ARG APP_VERSION
 ARG PORT=3000
