--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -78,7 +78,7 @@ jobs:
           done
 
       - name: Run migrations and seed database (if applicable)
-        run: pnpm --filter telli-dialog db:migrate && pnpm --filter telli-dialog db:seed
+        run: pnpm --filter @telli/shared db:migrate && pnpm --filter @telli/shared db:seed
 
       - name: Start application
         run: |
