--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -55,6 +55,7 @@
     "prettier": "3.4.2",
     "prettier-eslint": "16.4.2",
     "typescript": "5.7.2",
+    "tsx": "4.19.4",
     "vitest": "3.0.5"
   }
 }
