--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -26,13 +26,16 @@
     "@opentelemetry/semantic-conventions": "1.37.0",
     "@t3-oss/env-nextjs": "0.10.1",
     "@telli/ui": "workspace:*",
+    "@telli/shared": "workspace:*",
     "lucide-react": "0.536.0",
     "next": "15.5.4",
     "next-auth": "4.24.11",
+    "pg": "8.13.3",
     "react": "19.0.0",
     "react-csv": "2.2.2",
     "react-dom": "19.0.0",
     "react-hook-form": "7.65.0",
+    "require-in-the-middle": "8.0.1",
     "sonner": "2.0.7",
     "zod": "3.25.67"
   },
