--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -20,8 +20,8 @@
     "e2e": "NODE_OPTIONS=--experimental-require-module playwright test",
     "e2e:api": "dotenvx run -f .env.local -- playwright test tests/api/",
     "e2e:api:ui": "dotenvx run -f .env.local -- playwright test tests/api/ --ui",
-    "e2e:headed": "playwright test --headed",
-    "e2e:ui": "playwright test --ui",
+    "e2e:headed": "dotenvx run -f .env.local -- playwright test --headed",
+    "e2e:ui": "dotenvx run -f .env.local -- playwright test --ui",
     "k6:build": "node e2e/load_test/esbuild.k6.config.mjs",
     "prek6:run": "pnpm k6:build",
     "k6:run": "dotenvx run -f .env.k6 -- k6 run",
