--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -5,7 +5,11 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "paths": {
+      "baseUrl": ["."],
+      "@shared/*": ["./src/*"]
+    }
   },
   "exclude": ["dist", "build", "node_modules"]
 }
