TD-595 disable telemetry in e2e tests

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -92,6 +92,9 @@ jobs:
           NODE_ENV=test pnpm --filter telli-dialog build:envless
           pnpm --filter telli-dialog start:oidc &
           pnpm --filter telli-dialog start &
+        env:
+          NEXT_TELEMETRY_DISABLED: 1
+          TURBO_TELEMETRY_DISABLED: 1
 
       - name: Run E2E tests
         run: pnpm --filter telli-dialog e2e
