Disable telemetry in pipeline

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - main
 
+env:
+  NEXT_TELEMETRY_DISABLED: 1
+  TURBO_TELEMETRY_DISABLED: 1
+
 jobs:
   install:
     runs-on: ubuntu-latest
