--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@telli/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {},
   "dependencies": {
     "@radix-ui/react-checkbox": "1.3.3",
