--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -34,7 +34,7 @@ jobs:
           restore-keys: |
             turbo-${{ runner.os }}-
 
-  checks:
+  check_audit:
     runs-on: ubuntu-latest
     needs: install
     steps:
@@ -127,7 +127,7 @@ jobs:
   build_push_docker_image_dialog:
     name: Build and push docker image telli-dialog
     runs-on: ubuntu-latest
-    needs: [checks, check_formatting, check_types, check_linter, check_unit_tests]
+    needs: [check_audit, check_formatting, check_types, check_linter, check_unit_tests]
     timeout-minutes: 10
     if: |
       startsWith(github.head_ref, 'ci/') ||
@@ -169,7 +169,7 @@ jobs:
   build_push_docker_image_admin:
     name: Build and push docker image telli-admin
     runs-on: ubuntu-latest
-    needs: [checks, check_formatting, check_types, check_linter, check_unit_tests]
+    needs: [check_audit, check_formatting, check_types, check_linter, check_unit_tests]
     timeout-minutes: 10
     if: |
       startsWith(github.head_ref, 'ci/') ||
