--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -129,9 +129,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check_audit, check_formatting, check_types, check_linter, check_unit_tests]
     timeout-minutes: 10
-    if: |
-      startsWith(github.head_ref, 'ci/') ||
-      github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
+
+    permissions:
+      packages: write
 
     steps:
       - name: Checkout code
@@ -140,12 +141,12 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to IONOS Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: telli.cr.de-fra.ionos.com
-          username: github-push
-          password: ${{ secrets.IONOS_REGISTRY_TOKEN_GITHUB_PUSH }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -163,7 +164,7 @@ jobs:
           build-args: |
             CI=${CI}
             APP_VERSION=${{ github.sha }}
-          tags: telli.cr.de-fra.ionos.com/telli/chatbot:${{ github.sha }}
+          tags: ghcr.io/fwu-de/telli-dialog:${{ github.sha }}
           push: true
 
   build_push_docker_image_admin:
@@ -171,9 +172,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check_audit, check_formatting, check_types, check_linter, check_unit_tests]
     timeout-minutes: 10
-    if: |
-      startsWith(github.head_ref, 'ci/') ||
-      github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
+
+    permissions:
+      packages: write
 
     steps:
       - name: Checkout code
@@ -182,12 +184,12 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to IONOS Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: telli.cr.de-fra.ionos.com
-          username: github-push
-          password: ${{ secrets.IONOS_REGISTRY_TOKEN_GITHUB_PUSH }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -195,7 +197,7 @@ jobs:
           context: .
           file: apps/admin/Dockerfile
           build-args: APP_VERSION=${{ github.sha }}
-          tags: telli.cr.de-fra.ionos.com/telli/admin:${{ github.sha }}
+          tags: ghcr.io/fwu-de/telli-admin:${{ github.sha }}
           push: true
 
   deploy_apps:
@@ -219,9 +221,9 @@ jobs:
           COMMIT_HASH=${{ github.sha }}
           echo "Updating Kubernetes deployment with image tag $COMMIT_HASH"
           kubectl set image deployment/telli-dialog-stage \
-            telli-dialog-stage=telli.cr.de-fra.ionos.com/telli/chatbot:$COMMIT_HASH -n telli-stage
+            telli-dialog-stage=ghcr.io/fwu-de/telli-dialog:$COMMIT_HASH -n telli-stage
           kubectl set image deployment/telli-admin-stage \
-            telli-admin-stage=telli.cr.de-fra.ionos.com/telli/admin:$COMMIT_HASH -n telli-stage
+            telli-admin-stage=ghcr.io/fwu-de/telli-admin:$COMMIT_HASH -n telli-stage
 
       - name: Wait for rollout to complete
         run: |
