TD-650 update .env.example for telli-admin

--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -1,5 +1,9 @@
 NEXTAUTH_URL="http://localhost:3001"
 
+# For local development keycloak
+#KEYCLOAK_CLIENT_ID=telli-dev-client
+#KEYCLOAK_CLIENT_SECRET=ClientSecret
+#KEYCLOAK_ISSUER=http://localhost:8080/realms/telli-local
 
 AUTH_SECRET="REPLACE_ME"
 
