--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -69,6 +69,7 @@
     "he": "1.2.0",
     "import-in-the-middle": "2.0.0",
     "ioredis": "5.8.2",
+    "isbinaryfile": "5.0.7",
     "jsdom": "27.2.0",
     "katex": "0.16.25",
     "mammoth": "1.11.0",
