--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,6 +14,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.934.0",
+    "@aws-sdk/s3-request-presigner": "3.934.0",
     "@hookform/resolvers": "3.10.0",
     "@opentelemetry/api": "1.9.0",
     "@opentelemetry/auto-instrumentations-node": "0.67.0",
