Use weekly schedule for dependabot npm

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,7 +28,7 @@ updates:
     directory: '/'
     labels: ['dependencies']
     schedule:
-      interval: 'daily'
+      interval: 'weekly'
     groups:
       # Group safe, non-breaking bumps to reduce PRs
       minor-and-patch:
