--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-s3": "3.931.0",
     "@aws-sdk/s3-request-presigner": "3.931.0",
     "@dotenvx/dotenvx": "1.51.1",
+    "@sentry/nextjs": "10.25.0",
     "@t3-oss/env-core": "0.13.8",
     "drizzle-kit": "0.31.7",
     "drizzle-orm": "0.44.7",
