--- a/turbo.json
+++ b/turbo.json
@@ -24,7 +24,8 @@
     "OTEL_METRIC_EXPORT_TIMEOUT",
     "SENTRY_DSN",
     "SENTRY_ENVIRONMENT",
-    "LOADTEST_PASSWORD"
+    "LOADTEST_PASSWORD",
+    "NEXT_PUBLIC_SENTRY_LOG_LEVEL"
   ],
   "tasks": {
     "build": {
