--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -1,9 +1,16 @@
 # Authentication
-NEXTAUTH_URL=https://titanom.ngrok.app
+NEXTAUTH_URL=
 AUTH_SECRET=
 VIDIS_CLIENT_ID=
 VIDIS_CLIENT_SECRET=
 VIDIS_BASE_URI=
+
+# For local development keycloak
+#NEXTAUTH_URL=http://localhost:3000
+#VIDIS_CLIENT_ID=telli-dev-client
+#VIDIS_CLIENT_SECRET=ClientSecret
+#VIDIS_BASE_URI=http://localhost:8080/realms/telli-local
+#VIDIS_ISSUER_URI=http://localhost:8080/realms/telli-local
 
 # Persistence
 DATABASE_URL=postgresql://postgres:test1234@127.0.0.1:5432/postgres
