--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -32,6 +32,7 @@
     "drizzle-orm": "0.44.7",
     "drizzle-zod": "0.8.3",
     "nanoid": "5.1.6",
+    "next": "15.5.4",
     "pg": "8.16.3",
     "zod": "4.1.12"
   },
