--- a/apps/dialog/package.json
+++ b/apps/dialog/package.json
@@ -13,7 +13,7 @@
     "build:oidc": "node e2e/load_test/esbuild.oidc.config.js",
     "lint": "next lint",
     "types": "tsc",
-    "check-types": "tsc --noEmit",
+    "check-types": "next typegen && tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
     "format": "prettier --write .",
