TD-733 setup RabbitMq for development

--- a/apps/dialog/.env.example
+++ b/apps/dialog/.env.example
@@ -38,3 +38,6 @@ OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:9090/api/v1/otlp/v1/metrics
 
 # Valkey (Redis) configuration for session storage
 VALKEY_URL="redis://localhost:6379/0"
+
+# RabbitMq for reporting
+RABBITMQ_URI=amqp://user:password@localhost:5672
