--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -164,7 +164,9 @@ jobs:
           build-args: |
             CI=${CI}
             APP_VERSION=${{ github.sha }}
-          tags: ghcr.io/fwu-de/telli-dialog:${{ github.sha }}
+          tags: |
+            ghcr.io/fwu-de/telli-dialog:latest
+            ghcr.io/fwu-de/telli-dialog:${{ github.sha }}
           push: true
 
   build_push_docker_image_admin:
@@ -197,7 +199,9 @@ jobs:
           context: .
           file: apps/admin/Dockerfile
           build-args: APP_VERSION=${{ github.sha }}
-          tags: ghcr.io/fwu-de/telli-admin:${{ github.sha }}
+          tags: |
+            ghcr.io/fwu-de/telli-admin:latest
+            ghcr.io/fwu-de/telli-admin:${{ github.sha }}
           push: true
 
   deploy_apps:
@@ -216,14 +220,10 @@ jobs:
           kubeconfig: ${{ secrets.KUBECONFIG_FILE }}
           context: ''
 
-      - name: Update Kubernetes deployment
+      - name: Restart Kubernetes deployment
         run: |
-          COMMIT_HASH=${{ github.sha }}
-          echo "Updating Kubernetes deployment with image tag $COMMIT_HASH"
-          kubectl set image deployment/telli-dialog-stage \
-            telli-dialog-stage=ghcr.io/fwu-de/telli-dialog:$COMMIT_HASH -n telli-stage
-          kubectl set image deployment/telli-admin-stage \
-            telli-admin-stage=ghcr.io/fwu-de/telli-admin:$COMMIT_HASH -n telli-stage
+          echo "Restarting Kubernetes deployment to pull new latest containers"
+          kubectl rollout restart deployment/telli-dialog-stage -n telli-stage
 
       - name: Wait for rollout to complete
         run: |
