--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -132,7 +132,10 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     permissions:
+      contents: read
       packages: write
+      id-token: write
+      attestations: write
 
     steps:
       - name: Checkout code
@@ -149,6 +152,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
+        id: docker-build-dialog
         uses: docker/build-push-action@v6
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
@@ -168,6 +172,14 @@ jobs:
             ghcr.io/fwu-de/telli-dialog:latest
             ghcr.io/fwu-de/telli-dialog:${{ github.sha }}
           push: true
+          provenance: mode=max
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: ghcr.io/fwu-de/telli-dialog
+          subject-digest: ${{ steps.docker-build-dialog.outputs.digest }}
+          push-to-registry: true
 
   build_push_docker_image_admin:
     name: Build and push docker image telli-admin
@@ -194,6 +206,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
+        id: docker-build-admin
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -203,6 +216,14 @@ jobs:
             ghcr.io/fwu-de/telli-admin:latest
             ghcr.io/fwu-de/telli-admin:${{ github.sha }}
           push: true
+          provenance: mode=max
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: ghcr.io/fwu-de/telli-admin
+          subject-digest: ${{ steps.docker-build-admin.outputs.digest }}
+          push-to-registry: true
 
   deploy_apps:
     name: Deploy to staging
