--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,7 +20,8 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint \"**/*.ts*\" --max-warnings 0",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.934.0",
@@ -44,6 +45,7 @@
     "@types/pg": "8.15.6",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
+    "@vitest/coverage-v8": "4.0.15",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-turbo": "2.6.1",
@@ -52,6 +54,6 @@
     "prettier-eslint": "16.4.2",
     "typescript": "5.9.3",
     "tsx": "4.20.6",
-    "vitest": "3.0.5"
+    "vitest": "4.0.15"
   }
 }
