--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -189,7 +189,10 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     permissions:
+      contents: read
       packages: write
+      id-token: write
+      attestations: write
 
     steps:
       - name: Checkout code
